# borrowing_costs_research

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yaml
output/interest_rates/: AGO_1989_2023.csv  BDI_1970_2023.csv  BEN_1970_2023.csv  BFA_1970_2023.csv  BWA_1970_2023.csv  CAF_1970_2022.csv  CIV_1970_2023.csv  CMR_1970_2023.csv  COD_1970_2023.csv  COG_1970_2023.csv  COM_1971_2023.csv  CPV_1981_2023.csv  DJI_1970_2023.csv  DZA_1970_2016.csv  EGY_1970_2023.csv  ERI_1994_2015.csv  ETH_1970_2023.csv  GAB_1970_2023.csv  GHA_1970_2023.csv  GIN_1970_2023.csv  GMB_1970_2023.csv  GNB_1974_2023.csv  KEN_1970_2023.csv  LBR_1970_2023.csv  LSO_1970_2023.csv  MAR_1970_2023.csv  MDG_1970_2023.csv  MLI_1970_2023.csv  MOZ_1984_2023.csv  MRT_1970_2023.csv  MUS_1971_2023.csv  MWI_1970_2023.csv  NER_1970_2023.csv  NGA_1970_2023.csv  RWA_1970_2023.csv  SDN_1970_2019.csv  SEN_1970_2023.csv  SLE_1970_2021.csv  SOM_1971_2022.csv  STP_1977_2023.csv  (+9 more)
output/interest_rates/africa/: BEN_1970_2023.csv  CAF_1970_2022.csv  CMR_1970_2023.csv  COG_1970_2023.csv  COM_1971_2023.csv  CPV_1981_2023.csv  DJI_1970_2023.csv  ERI_1994_2015.csv  GAB_1970_2023.csv  GIN_1970_2023.csv  LBR_1970_2023.csv  LSO_1970_2023.csv  MDG_1970_2023.csv  MLI_1970_2023.csv  (+8 more)
output/projects/: wb_projects_interest.csv
output/visualisations/: interest_rates.csv
scripts/: country_level.py  flourish_viz.py  logger.py  project_level.py
scripts/crs/: crs_data.py
scripts/ids/: clean_data.py  commitments.py  grace.py  interest.py  maturity.py  terms.py  tools.py
scripts/wb/: statements_api.py
(+72 files in other folders)
