[tool.poetry]
package-mode = false
authors = ["The ONE Campaign"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pandas = "^2.2.3"
bblocks = "^1.4.0"
bblocks-data-importers = "^0.2.1"
oda-reader = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
